--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,104 +1,143 @@
 .task1 {
+  background-color: green;
 }
 
 .task2 {
+  background-image: url(/img/img-400x200.jpg);
 }
 
 .task3 {
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 0, 1) 1%,
+    rgba(230, 0, 35, 1) 100%
+  );
 }
 
 .task4 {
+  background: radial-gradient(
+    circle,
+    rgba(63, 135, 166, 1) 8%,
+    rgba(235, 248, 225, 1) 36%,
+    rgba(246, 157, 60, 1) 100%
+  );
 }
 
 .task5 {
+  background: conic-gradient(
+    from 3.1416rad at 10% 50%,
+    #e66465,
+    #9198e5
+  );
 }
 
 .task6 {
   background-image: url('/img/img-400x200.jpg');
+  background-repeat: repeat-x;
 }
 
 .task7 {
   background-image: url('/img/img-400x200.jpg');
+  background-repeat: repeat-y;
 }
 
 .task8 {
   background-image: url('/img/img-400x200.jpg');
+  background-repeat: no-repeat;
 }
 
 .task9 {
   background-image: url('/img/img-400x200.jpg');
+  background-repeat: space;
 }
 
 .task10 {
   background-image: url('/img/img-400x200.jpg');
+  background-repeat: round;
 }
 
 .task11 {
   background-image: url('/img/img-400x200.jpg');
+  background-attachment: scroll;
 }
 
 .task12 {
   background-image: url('/img/img-400x200.jpg');
+  background-attachment: fixed;
 }
 
 .task13 {
   background-image: url('/img/img-400x200.jpg');
+  background-attachment: local;
 }
 
 .task14 {
   background-image: url('/img/img-400x200.jpg');
+  background-position: center;
 }
 
 .task15 {
   background-image: url('/img/img-400x200.jpg');
+  background-position: top;
 }
 
 .task16 {
   background-image: url('/img/img-400x200.jpg');
+  background-position: bottom;
 }
 
 .task17 {
   background-image: url('/img/img-400x200.jpg');
+  background-position: left;
 }
 
 .task18 {
   background-image: url('/img/img-400x200.jpg');
+  background-position: right;
 }
 
 .task19 {
   background-image: url('/img/img-400x200.jpg');
+  background-position: 100px;
 }
 
 .task20 {
   background-image: url('/img/img-400x200.jpg');
+  background-size: auto;
 }
 
 .task21 {
   background-image: url('/img/img-400x200.jpg');
+  background-size: 600px;
 }
 
 .task22 {
   background-image: url('/img/img-400x200.jpg');
+  background-size: 50%;
 }
 
 .task23 {
   background-image: url('/img/img-400x200.jpg');
+  background-size: contain;
 }
 
 .task24 {
   background-image: url('/img/img-400x200.jpg');
+  background-size: cover;
 }
 
 .task25 {
   border: 20px dashed black;
   background-image: url('/img/img-400x200.jpg');
   box-sizing: border-box;
+  background-clip: border-box;
 }
 
 .task26 {
   background-image: url('/img/img-400x200.jpg');
   border: 20px dashed black;
   box-sizing: border-box;
+  background-clip: padding-box;
 }
 
 .task27 {
@@ -106,6 +145,7 @@
   font-size: 120px;
   font-weight: 900;
   color: transparent;
+  -webkit-background-clip: text;
 }
 
 .task28 {
@@ -113,6 +153,7 @@
   box-sizing: border-box;
   border: 20px dashed black;
   background-repeat: no-repeat;
+  background-origin: border-box;
 }
 
 .task29 {
@@ -121,6 +162,7 @@
   border: 20px dashed black;
   padding: 20px;
   background-repeat: no-repeat;
+  background-origin: padding-box;
 }
 
 .task30 {
@@ -131,6 +173,7 @@
   font-size: 100px;
   font-weight: 900;
   padding: 60px;
+  background-origin: content-box;
 }
 
 .task31 {
